# Smart-Healthcare

./: .gitignore  TODO.md  项目索引.md
.claude/: settings.local.json
.cursor/rules/: debug-mode.mdc  readable-code.mdc  (+1 more)
AI/: .gitignore  README.md  pyproject.toml
AILearn/: README.md  pyproject.toml
AILearn/.claude/: settings.local.json
AILearn/ailearn_ai/: auth_context.py
AILearn/ailearn_ai/API/: __main__.py  app.py  schemas.py
AILearn/ailearn_ai/API/routers/: chat.py
AILearn/ailearn_ai/chains/: __init__.py  qa.py
AILearn/ailearn_ai/logging/: __init__.py  tool_calls.py
AILearn/ailearn_ai/memory/: __init__.py  embeddings.py  health.py  manager.py  profile.py  retriever.py  store.py
AILearn/ailearn_ai/settings/: __init__.py  base.py
AILearn/ailearn_ai/tools/: __init__.py  huiliao_client.py
AILearn/ailearn_ai/tools/catalog/: dashboard.py  dept.py  drug.py  medical_item.py  schedule.py  staff.py
AILearn/ailearn_ai/tools/outpatient/: __init__.py  charge.py  dispense.py  exam.py  prescription.py  registration.py  visit.py
AILearn/ailearn_ai/tools/patient/: __init__.py  patient.py
AILearn/docs/: API.md  memory-architecture.md  memory-roadmap.md  memory.md  memory2.md
HuiLiao/: .gitignore
React/: .env.example  index.html  package-lock.json  package.json
WenRun/: pom.xml
docs/: AI_CALL_LOGIC.md
huiliao-react/: index.html  package-lock.json  package.json
wenrun-AI/: .env.example  .gitignore  pyproject.toml
wenrun-AI/app/: main.py
wenrun-AI/app/agents/: __init__.py  llm.py
wenrun-AI/app/agents/hitl/: __init__.py  common.py  registration.py
wenrun-AI/app/agents/router/: __init__.py  graph.py  hitl.py  nodes.py  prompts.py  state.py
wenrun-AI/app/api/routes/: __init__.py  health.py  java_chat.py
wenrun-AI/app/chains/: base_chain.py
wenrun-AI/app/core/: config.py  logging.py
wenrun-AI/app/graphs/: router_graph.py
wenrun-AI/app/integrations/: __init__.py  java_auth.py  patient_tools.py
wenrun-AI/app/memory/: __init__.py  client.py  config_memory.py  embeddings.py  memory_store.py  store.py
wenrun-AI/app/prompts/: agent_router.yaml
wenrun-AI/app/routers/: java_intergration.py
wenrun-AI/app/schemas/: __init__.py  chat.py  response.py
wenrun-AI/app/services/: __init__.py  auth.py
wenrun-AI/app/tests/: test_hitl_helpers.py
wenrun-AI/app/tools/: __init__.py  billing.py  catalog.py  client.py  patient.py  profile.py  records.py  registration.py
wenrun-AI/docs/: README.md  hitl.md
wenrun-react/: index.html  package-lock.json  package.json
(+724 files in other folders)
