# 项目元数据与依赖声明（PEP 621 标准）
# 安装：pip install -e .

[project]
name = "wenrun-ai"
version = "0.1.0"
description = "WenRun FastAPI service skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wenrun_ai"]
