# 项目元数据与依赖声明（PEP 621 标准）
# 安装：pip install -e .

[project]
name = "wenrun-ai"
version = "0.1.0"
description = "WenRun FastAPI service skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.12.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "pytest>=8.0.0",
]

[project.scripts]
wenrun-api = "wenrun_ai.API.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wenrun_ai"]
